# tree-sitter-mxml

./: .editorconfig  Cargo.toml  Makefile  README.md  binding.gyp  compile_parser.sh  grammar.js  package.json
.nova/: Configuration.json
.nova/Tasks/: Generate and Make.json  Generate.json  Make.json
bindings/go/: binding_test.go
queries/: folds.scm
src/: grammar.json  parser.c  scanner.c
