[package]
name = "tree-sitter-mxml"
description = "mxml grammar for the tree-sitter parsing library"
version = "0.19.0"
keywords = ["incremental", "parsing", "xml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/amigaabattoir/tree-sitter-mxml"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19"

[build-dependencies]
cc = "1.0"
